--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.2.1",
-    "moment": "2.22.2",
-    "core-js": "2.5.7",
-    "zone.js": "0.8.26",
-    "hammerjs": "2.0.8",
-    "@angular/cdk": "6.3.1",
-    "@angular/core": "6.0.7",
-    "@angular/http": "6.0.7",
-    "@angular/forms": "6.0.7",
-    "@angular/common": "6.0.7",
-    "@angular/router": "6.0.7",
-    "@angular/compiler": "6.0.7",
-    "@angular/material": "6.3.1",
-    "web-animations-js": "2.3.1",
     "@angular/animations": "6.0.7",
-    "@angular/platform-browser": "6.0.7",
-    "angular-in-memory-web-api": "0.5.4",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "6.0.7",
+    "@angular/compiler": "6.0.7",
+    "@angular/core": "6.0.7",
+    "@angular/forms": "6.0.7",
+    "@angular/http": "6.0.7",
+    "@angular/material": "6.3.1",
     "@angular/material-moment-adapter": "6.3.1",
-    "@angular/platform-browser-dynamic": "6.0.7"
+    "@angular/platform-browser": "6.0.7",
+    "@angular/platform-browser-dynamic": "6.0.7",
+    "@angular/router": "6.0.7",
+    "angular-in-memory-web-api": "0.5.4",
+    "core-js": "2.5.7",
+    "hammerjs": "2.0.8",
+    "moment": "2.22.2",
+    "rxjs": "6.2.1",
+    "web-animations-js": "2.3.1",
+    "zone.js": "0.8.26"
   },
   "scripts": {
     "ng": "ng",
